[fix/#237] 나와 맞는 게시글 조회 API에서 shortSummary 필드 null값 문제 해결 (#239)
* fix: dto로 변환하던 중 shortSummary 필드가 누락되던 문제 해결

* chore: 사용하지 않는 레포지토리 메서드 제거

* test: 서비스 단위 테스트 구현

* test: 통합 테스트 구현